<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.books.BooksActivity">

    <include layout="@layout/include_toolbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>

    <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarMain"
            app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerBooks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_book"/>

        <TextView
                android:id="@+id/textError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:text="Error 401"/>

    </ViewFlipper>


</androidx.constraintlayout.widget.ConstraintLayout>